add icons to footer

--- a/menu.html
+++ b/menu.html
@@ -128,11 +128,11 @@
 
 
     <footer>
-        <div>
+        <div class="icons">
             <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><img src="images/homepage/envelope.svg" alt=""></li>
+                <li><img src="images/homepage/facebook.svg" alt=""></li>
+                <li><img src="images/homepage/instagram.svg" alt=""></li>
             </ul>
             <small>+1 571 234 6789</small>
             <p>22349 Spice Ln, Dallas, TX 75032</p>
