changes to css and added js file

--- a/menu.html
+++ b/menu.html
@@ -14,8 +14,16 @@
         <div class="container">
             <div class="hero">
                 <div class="navbar">
-                    <a href="index.html"><img id="logo" src="images/menu/LOGO.svg" alt="brand-logo"></a>
-                    <nav>
+                    <a href="index.html"><img id="logo" class="brand-logo" src="images/menu/LOGO.svg" alt="brand-logo"></a>
+                    
+                    <!-- navbar -->
+                    <a href="#" class="toggle-button">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </a>
+
+                    <nav class="navbar-links">
                         <ul>
                             <li><a href="menu.html">Menu</a></li>
                             <li><a href="about.html">About</a></li>
@@ -38,14 +46,14 @@
                     <h1><span class="line"></span>Food<span class="line"></span></h1>
                     <div class="menu">
                         <div class="one">
-                            <div><img src="images/menu/pexels-william-choquette-2641886.png" alt=""></div>
+                            <img src="images/menu/pexels-william-choquette-2641886.png" alt="">
                             <div class="dish">
                                 <h3>Kona Plate</h3>
                                 <p>Chargrilled Chicken  +  Veggies skewers On a bed of rice with housemade mediterranean salad.</p>
                             </div>
                         </div>
                         <div class="one">
-                            <div><img src="images/menu/pexels-prabal-pratap-singh-9609869.png" alt=""></div>
+                            <img src="images/menu/pexels-prabal-pratap-singh-9609869.png" alt="">
                             <div class="dish">
                                 <h3>Lamb Marsala Wok</h3>
                                 <p>Fall-off-the-bone stewed lamb with spiced yellow biryani rice.</p>
@@ -53,15 +61,15 @@
                         </div>
                     </div>
                     <div class="menu">
-                        <div>
-                            <div><img src="images/menu/annie-spratt-Pk6nuEXu_Lo-unsplash.png" alt=""></div>
+                        <div class="one">
+                            <img src="images/menu/annie-spratt-Pk6nuEXu_Lo-unsplash.png" alt="">
                             <div class="dish">
                                 <h3>Spicy Fried Rice</h3>
                                 <p>Thai peppers, scallions, basil, soy sauce and a blend of housemade spices.</p>
                             </div>
                         </div>
-                        <div>
-                            <div><img src="images/menu/Jollof-Rice-4.png" alt=""></div>
+                        <div class="one">
+                            <img src="images/menu/Jollof-Rice-4.png" alt="">
                             <div class="dish">
                                 <h3>Jollof Rice</h3>
                                 <p>Jasmine rice with red tomato sauce, beef bits and a blend of spices.</p>
@@ -69,15 +77,15 @@
                         </div>
                     </div>
                     <div class="menu">
-                        <div>
-                            <div><img src="images/menu/markus-winkler-WHtVB-RiW2I-unsplash.png" alt=""></div>
+                        <div class="one">
+                            <img src="images/menu/markus-winkler-WHtVB-RiW2I-unsplash.png" alt="">
                             <div class="dish">
                                 <h3>Chicken Khebabs</h3>
                                 <p>Chargrilled chicken khebabs with French fries, onions, tomatoes and a side of pita bread</p>
                             </div>
                         </div>
-                        <div>
-                            <div><img src="images/menu/Ghana_Salad_10.png" alt=""></div>
+                        <div class="one">
+                            <img src="images/menu/Ghana_Salad_10.png" alt="">
                             <div class="dish">
                                 <h3>Loaded Salad</h3>
                                 <p>Lettuce, tomatoes, cucumbers, eggs, onions, red peppers, peas, ketchup, baked beans, grilled chicken breast and sardines
@@ -88,15 +96,15 @@
                     <h2><span class="line"></span>Drinks<span class="line"></span></h2>
 
                     <div class="menu">
-                        <div>
-                            <div><img src="images/menu/Hibiscus-Tea-02.png" alt=""></div>
+                        <div class="one">
+                            <img src="images/menu/Hibiscus-Tea-02.png" alt="">
                             <div class="dish">
                                 <h3>Sobolo</h3>
                                 <p>Iced hibiscus tea sweetened with blue agave syrup + a hint of cinnamon</p>
                             </div>
                         </div>
-                        <div>
-                            <div><img src="images/menu/asana-1.png" alt=""></div>
+                        <div class="one">
+                            <img src="images/menu/asana-1.png" alt="">
                             <div class="dish">
                                 <h3>Asaana</h3>
                                 <p>Roasted corn drink sweetened with cane sugar + a splash of condensed milk</p>
@@ -142,6 +150,6 @@
 
 
   
-    
+    <script src="script.js"></script>
 </body>
 </html>
