--- a/about.html
+++ b/about.html
@@ -12,8 +12,17 @@
         <div class="container">
             <div class="hero">
                 <div class="navbar">
-                    <a href="index.html"><img src="images/about/LOGO.svg" alt=""></a>
-                    <nav>
+                    <a href="index.html"><img class="brand-logo" src="images/about/LOGO.svg" alt=""></a>
+
+
+                    <!-- navbar -->
+                    <a href="#" class="toggle-button">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </a>
+
+                    <nav class="navbar-links">
                         <ul>
                             <li><a href="menu.html">Menu</a></li>
                             <li><a href="about.html">About</a></li>
@@ -93,5 +102,7 @@
             <p>&copy; Chays Scratch Kitchen | All Rights Reserved, 2021.</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
