--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,16 @@
     <div class="container">
         <div class="hero">
             <div class="navbar">
-                <a href="index.html"><img src="images/contact/LOGO.svg" alt="brand-logo" ></a>
-                <nav>
+                <a href="index.html"><img class="brand-logo" src="images/contact/LOGO.svg" alt="brand-logo" ></a>
+
+                <!-- navbar -->
+                <a href="#" class="toggle-button">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+
+                <nav class="navbar-links">
                     <ul>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="about.html">About</a></li>
@@ -66,5 +74,7 @@
         <p>&copy; Chays Scratch Kitchen | All Rights Reserved, 2021.</p>
     </div>
 </footer>
+
+<script src="script.js"></script>
 </body>
 </html>
